namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-staff-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-staff-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "manage_a_workforce_dev"
    cloud-platform.justice.gov.uk/application: "Staff information"
    cloud-platform.justice.gov.uk/owner: "Manage a Workforce: manageaworkforce@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-staff-api"
    cloud-platform.justice.gov.uk/team-name: "manage-a-workforce"
    cloud-platform.justice.gov.uk/review-after: ""
